# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/games/: calc_game.py  engine.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
