[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet_educational_project_brain_games"
authors = ["Vladislav <1@zithen.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
